gcc/testsuite/rust/rustc/ui/lexer/lex-bad-str-literal-as-char-2.rs
//@ run-rustfix
fn main() {
    println!(' 1 + 1'); // { dg-error "" "" { target *-*-* } }
}

